# generic-rag

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ADAPTERS.md  API_REFERENCE.md  ARCHITECTURE.md  CLI.md  COMPATIBILITY.md  CONFIGURATION.md  DOCUMENT_LOADERS.md  EMBEDDINGS.md  EVALUATION.md  GETTING_STARTED.md  PROVIDERS.md  RELEASE_CHECKLIST.md  RERANKING.md  ROADMAP.md  STRUCTURED_OUTPUT.md  TROUBLESHOOTING.md  USING_YOUR_OWN_CORPUS.md  VECTOR_STORES.md
examples/: basic_qa_demo.py  cross_encoder_reranker_example.py  evaluation_demo.py  html_loader.py  ollama_chat.py  openai_compatible_chat.py  openai_compatible_embeddings.py  pdf_loader.py  qdrant_vector_store.py  reranking_demo.py
examples/adapters/: fastapi_adapter_example.py  service_layer_adapter.py  simple_domain_adapter.py
src/generic_rag/: config.py
tests/cli/: test_cli_demo.py  test_cli_doctor.py  test_cli_eval.py  test_cli_inspect.py  test_cli_provider.py  test_cli_version.py
tests/config/: test_provider_config.py
tests/context/: test_citations.py  test_xml_context_builder.py
tests/core/: test_optional.py
tests/embeddings/: test_hash_provider.py  test_openai_compatible_embeddings.py
tests/evaluation/: test_io.py  test_metrics.py  test_runner.py
tests/examples/: test_fastapi_adapter_example.py  test_service_layer_adapter_example.py  test_simple_adapter_example.py
tests/ingestion/: test_chunkers.py  test_html_loader.py  test_loaders.py  test_pdf_loader.py
tests/llm/: test_dispatcher.py  test_error_mapping.py  test_ollama_provider.py  test_openai_compatible_provider.py  test_retries.py  test_structured_output.py
tests/optional/: test_optional_guards.py
tests/pipelines/: test_default_qa_pipeline.py  test_default_qa_pipeline_reranker.py
tests/reranking/: test_cross_encoder_reranker.py  test_deterministic_reranker.py
tests/smoke/: test_cli_smoke.py  (+2 more)
(+50 files in other folders)
