[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "generic-rag"
version = "0.7.0"
description = "Agnostic RAG and LLM orchestration library"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27.0",
]

[project.scripts]
generic-rag = "generic_rag.cli.main:main"

[project.optional-dependencies]
embeddings-openai = []
qdrant = ["qdrant-client>=1.8.0"]
pdf = ["pymupdf>=1.24.0"]
html = ["beautifulsoup4>=4.12.0"]
fastapi = ["fastapi>=0.115.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "pytest-mock",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 120

[tool.mypy]
strict = true
